Fix z-index menu

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ header{
 	background-color: #1C1C1C;
 	width:100%;
 	height:120px;
+	z-index: 1;
 }
 
 nav{
